[package]
name = "npls1"
version = "0.1.0"
edition = "2024"
authors = ["89605502155 <ferubko1999@yandex.ru>"]
description = "Implementation of the N-PLS1 algorithm with Tikhonov L2 regularization in the Rust language"
license = "MIT"
repository = "https://github.com/89605502155/npls1"
readme = "README.md"

[dependencies]
nalgebra = "0.35.0"
